--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body class="text-white">
     <div
       id="app"
-      class="w-full h-screen flex flex-col bg-gradient-to-br from-emerald-500 to-emerald-900"
+      class="w-full h-screen flex flex-col bg-[url(bg.jpg)]"
     >
       <header
         class="flex w-4/5 items-center justify-between mx-auto py-16 flex-col gap-8"
