--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <title>MyStartPage!!</title>
   </head>
   <body class="text-white">
-    <div id="app" class="w-full h-screen flex flex-col bg-[url(bg.jpg)]">
+    <div id="app" class="w-full h-screen flex flex-col bg-blue-900">
       <header
         class="flex w-4/5 items-center justify-between mx-auto py-16 flex-col gap-8"
       >
